kubernetes/apps/networking/gateways/app/gateway-external-auth.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-auth
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.2.31
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ringbell-cc-tls
            namespace: cert-manager
